--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,13 +2,16 @@ name: 🐍 Generate Snake Animation
 
 on:
   schedule:
-    - cron: "0 0 * * *"  # every day at midnight
+    - cron: "0 0 * * *"  # Every midnight
   workflow_dispatch:
 
 jobs:
   generate:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
       - name: Generate GitHub Contribution Snake
         uses: Platane/snk@v3
         with:
@@ -17,7 +20,7 @@ jobs:
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
 
-      - name: Push to GitHub
+      - name: Push to GitHub (output branch)
         uses: crazy-max/ghaction-github-pages@v3
         with:
           target_branch: output
